// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs has the expected html structure 1`] = `
<div
  class="row"
>
  <div
    class="tabs"
  />
</div>
`;

exports[`Tabs should show links to other pages 1`] = `
<div
  class="row"
>
  <div
    class="tabs"
  >
    <div
      class="tab tab-selected"
    >
      <router-link-stub
        to="[object Object]"
      >
        
        one
      
      </router-link-stub>
    </div>
  </div>
</div>
`;
